# Hugin

./: Untitled-1.sh  sync.sh
docker/: README.md  docker-compose.yml  dockerfile  dockerfile.centos  dockerfile.ubuntu  makefile
enblend-enfuse-4.2/: Makefile.in  aclocal.m4  config.h.in  configure
hugin-2021.0.0/: CMakeLists.txt  Changes.txt  INSTALL_cmake  rev.txt
hugin-2021.0.0/src/hugin1/: CMakeLists.txt
hugin-2021.0.0/src/hugin1/base_wx/: GraphTools.cpp  huginConfig.cpp  wxPanoCommand.cpp  wxcms.cpp
hugin-2021.0.0/src/hugin1/calibrate_lens/: LensCalFrame.cpp  LensCalImageCtrl.cpp
hugin-2021.0.0/src/hugin1/hugin/: AboutDialog.cpp  CMakeLists.txt  CPDetectorDialog.cpp  CPEditorPanel.cpp  CPListFrame.cpp  ChangeImageVariableDialog.cpp  GLPreviewFrame.cpp  GLPreviewFrame.h  GLRenderer.cpp  GLViewer.cpp  GLViewer.h  HDRMergeOptionDialog.cpp  ImageVariableDialog.cpp  ImageVariableDialog.h  ImagesPanel.cpp  ImagesTree.cpp  MainFrame.cpp  MainFrame.h  MaskEditorPanel.cpp  MaskEditorPanel.h  MaskLoadDialog.cpp  OverviewCameraTool.cpp  OverviewCameraTool.h  PanoOperation.cpp  PanoOutputDialog.cpp  PanoPanel.cpp  PapywizardImport.cpp  PreferencesDialog.cpp  PreviewCameraTool.cpp  PreviewCameraTool.h  PreviewFrame.cpp  RawImport.cpp  ResetDialog.cpp  TextureManager.cpp  ToolHelper.cpp  ViewState.cpp  ViewState.h
hugin-2021.0.0/src/hugin1/hugin/xrc/data/help_en_EN/: Hugin_stacker.html
hugin-2021.0.0/src/hugin1/ptbatcher/: BatchFrame.cpp  FailedProjectsDialog.cpp  FindPanoDialog.cpp  FindPanoDialog.h  ProjectListBox.cpp  ProjectListBox.h
nona/: README.md  makefile  (+3 more)
(+93 files in other folders)
